kubernetes/apps/default/pocket-id-operator/resources/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pocket-id-route
  annotations:
    gatus.home-operations.com/enabled: "true"
    gatus.home-operations.com/endpoint: |-
      conditions: ["[DNS_RCODE] == NOERROR"]
spec:
  hostnames:
    - id.goyangi.io
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: pocket-id
          port: 1411
